--- a/index.html
+++ b/index.html
@@ -1,124 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>3D City Viewer</title>
-  <style>
-    #canvas-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      margin: 0;
-    }
-  </style>
+  <title>Hello World</title>
 </head>
 <body>
-  <div id="canvas-container"></div>
-
-  <script src="https://cdn.jsdelivr.net/npm/three@0.136.0/build/three.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three/examples/js/controls/OrbitControls.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
-  <script>
-    let scene, camera, renderer;
-    let controls;
-
-    init();
-    animate();
-
-    function init() {
-      const container = document.getElementById('canvas-container');
-
-      // Create the scene
-      scene = new THREE.Scene();
-
-      // Create the camera
-      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-      camera.position.set(0, 0, 5);
-
-      // Create the renderer
-      renderer = new THREE.WebGLRenderer();
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      container.appendChild(renderer.domElement);
-
-      // Create the controls for navigation
-      controls = new THREE.OrbitControls(camera, renderer.domElement);
-
-      // Load the city model
-      const loader = new THREE.GLTFLoader();
-      loader.load('models/buildings.gltf', function (gltf) {
-        const model = gltf.scene;
-        scene.add(model);
-
-        // Customize the city model as needed
-        model.position.set(0, 0, 0);
-        model.scale.set(1, 1, 1);
-
-        // Apply video texture to the desired mesh
-        model.traverse(function (child) {
-          if (child.isMesh && child.name === 'videoMesh') {
-            const video = document.createElement('video');
-            video.src = 'models/ExplosionsV1-0001.mp4';
-            video.loop = true;
-            video.autoplay = true;
-            video.crossOrigin = 'anonymous';
-
-            const videoTexture = new THREE.VideoTexture(video);
-            const videoMaterial = new THREE.MeshBasicMaterial({ map: videoTexture });
-
-            child.material = videoMaterial;
-          }
-        });
-      });
-
-      // Create the gradient background
-      const gradientTexture = new THREE.Texture(generateGradientCanvas());
-      gradientTexture.needsUpdate = true;
-      scene.background = gradientTexture;
-
-      // Load and add the additional videos as textures to the scene
-      const videoTexture1 = createVideoTexture('models/Gen2BarroqueGarden.mp4');
-      const videoTexture2 = createVideoTexture('models/ExplosionsV1-0001.mp4');
-
-      // Create the meshes for the videos and position them in the scene
-      const videoGeometry1 = new THREE.PlaneGeometry(2, 1.5);
-      const videoMesh1 = new THREE.Mesh(videoGeometry1, new THREE.MeshBasicMaterial({ map: videoTexture1 }));
-     videoMesh1.position.set(2, 0, 0);
-      scene.add(videoMesh1);
-
-      const videoGeometry2 = new THREE.PlaneGeometry(2, 1.5);
-      const videoMesh2 = new THREE.Mesh(videoGeometry2, new THREE.MeshBasicMaterial({ map: videoTexture2 }));
-      videoMesh2.position.set(-2, 0, 0);
-      scene.add(videoMesh2);
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-      renderer.render(scene, camera);
-      controls.update();
-    }
-
-    function generateGradientCanvas() {
-      const canvas = document.createElement('canvas');
-      const ctx = canvas.getContext('2d');
-      const gradient = ctx.createLinearGradient(0, 0, 0, window.innerHeight);
-      gradient.addColorStop(0, 'pink');
-      gradient.addColorStop(1, 'blue');
-      ctx.fillStyle = gradient;
-      ctx.fillRect(0, 0, window.innerWidth, window.innerHeight);
-      return canvas;
-    }
-
-    function createVideoTexture(videoPath) {
-      const video = document.createElement('video');
-      video.src = videoPath;
-      video.loop = true;
-      video.autoplay = true;
-      video.crossOrigin = 'anonymous';
-      return new THREE.VideoTexture(video);
-    }
-  </script>
+  <h1>Hello, World!</h1>
 </body>
 </html>
